@@ -1,7 +1,12 @@
+2019-05-27  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/specs/array4.ads: New test.
+
 2019-05-27  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	PR tree-optimization/88440
-	* gcc.target/aarch64/sve/index_offset_1.c: Add -fno-tree-loop-distribute-patterns.
+	* gcc.target/aarch64/sve/index_offset_1.c: Add
+	-fno-tree-loop-distribute-patterns.
 	* gcc.target/aarch64/sve/single_1.c: Likewise.
 	* gcc.target/aarch64/sve/single_2.c: Likewise.
 	* gcc.target/aarch64/sve/single_3.c: Likewise.
