@@ -1,3 +1,8 @@
+2019-05-27  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* dwarf2out.c (resolve_args_picking_1): Deal with DW_OP_GNU_addr_index
+	and DW_OP_GNU_const_index opcodes.
+
 2019-05-27  Uroš Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/i386.h (STACK_SIZE_MODE): Define.
